--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -13,8 +13,8 @@
                 title="Initiates file download" target="_blank">Kurzbeschreibung "Die Schul-Cloud" (.pdf)</a>
         </li>
     </ul>
-        <p>Das Projekt Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017 startete die Pilotphase, in der 27 MINT-EC-Schulen die Schul-Cloud testen und nutzen. Ab Mai 2018 startet die Roll-out-Phase, in der die Nutzung und Testung der Schul-Cloud stufenweise auf alle 300 Schulen aus dem nationalen Excellence-Schulnetzwerks MINT-EC ausgeweitet wird.</p>
-     <p>Seit dem wächst auch unser <a href="https://schul-cloud.org/team">Team</a> stetig!</p>
+    <br /> 
+        <p>Das Projekt Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017 startete die Pilotphase, in der 27 MINT-EC-Schulen die Schul-Cloud testen und nutzen. Ab Mai 2018 startet die Roll-out-Phase, in der die Nutzung und Testung der Schul-Cloud stufenweise auf alle 300 Schulen aus dem nationalen Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Seit dem wächst auch unser <a href="https://schul-cloud.org/team">Team</a> stetig!</p>
     <br />
     <h4>Unsere Pilotschulen</h4>
     <ul>
@@ -46,12 +46,7 @@
       <li><a href="http://www.wilhelm-hittorf-gymnasium.de/aktuelles/" target="_blank">Wilhelm-Hittorf-Gymnasium Münster</a></li>
     </ul>
     <br />
-  <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt:</p>
-<ul>
-        <li>- AG IT</li>
-<li>- AG Schulleitung</li>
-<li>- AG Unterricht</li>
-    </ul>
+  <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt: AG IT, Schulleitung & Unterricht.</p>
    <br /> 
 <p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte bedanken!</p> 
 <br /> 
@@ -69,19 +64,20 @@
  <br /> 
  <p><b>2017</b></p>
  <ul>
-        <li>- Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud. Technische Berichte Nr. 116. Potsdam: Universitätsverlag<br />  
-        <a href="https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/10385/file/tbhpi116.pdf"
-                title="Initiates file download" target="_blank">"Die Cloud für Schulen in Deutschland" (.pdf)</a></li>
-        <li>- Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
-        <li>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017). Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder? In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15. e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für Informatik.<br />
-       <a href="https://dl.gi.de/bitstream/handle/20.500.12116/4881/B7%20Schulrechner%20wandern%20in%20die%20Cloud.pdf?sequence=1&isAllowed=y"
-                title="Initiates file download" target="_blank">"Schulrechnerwandern in die Cloud" (.pdf)</a></li>
+        <li>Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). <a href="https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/10385/file/tbhpi116.pdf"
+                title="Initiates file download" target="_blank">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud.</a> Technische Berichte Nr. 116. Potsdam: Universitätsverlag </li>
+                <br /> 
+        <li>Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
+        <br /> 
+        <li>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017). <a href="https://dl.gi.de/bitstream/handle/20.500.12116/4881/B7%20Schulrechner%20wandern%20in%20die%20Cloud.pdf?sequence=1&isAllowed=y"
+                title="Initiates file download" target="_blank">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</a> In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15. e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für Informatik.</li>
       </ul>
     <br />
   <p><b>2018</b></p>
    <ul>
-        <li>- Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt Schul-Cloud . In Scheiter, K. & Riecke-Baulecke, T. (Hrsg.), Schulmanagement-Handbuch 165: Schule 4.0 (Vol. 37, S. 75–83). München: Oldenbourg.</li>
-        <li>- Malyska, V. & Meinel, C. (2018). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
+        <li>Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt Schul-Cloud . In Scheiter, K. & Riecke-Baulecke, T. (Hrsg.), Schulmanagement-Handbuch 165: Schule 4.0 (Vol. 37, S. 75–83). München: Oldenbourg.</li>
+        <br />
+        <li>Malyska, V. & Meinel, C. (2018). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
     </ul>
     <br /> 
     <h4>Aufzeichnungen von Vorträgen</h4>
