re-add login form

--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -118,6 +118,7 @@
             </section>
         </main>
         <aside class="col-md-4">
+            {{> "authentication/forms/login"}}
         </aside>
     </div>
 </div>
