--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -34,7 +34,7 @@
        <li><a href="http://www.klaus-groth-schule.de/" target="_blank">Klaus-Groth-Schule Neumünster</a></li>
       <li><a href="http://www.lgh-gmuend.de/" target="_blank">Landesgymnasium für Hochbegabte Schwäbisch Gmünd</a></li>
       <li><a href="https://www.landesschule-pforta.de/index.php" target="_blank">Landesschule Pforta Naumburg</a></li>
-      <li><a href="http://leiningergymnasium.de/" target="_blank">Unterrichtsvorbereitung in der Schul-CloudLeininger-Gymnasium Grünstadt</a></li>
+      <li><a href="http://leiningergymnasium.de/" target="_blank">Leininger-Gymnasium Grünstadt</a></li>
       <li><a href="http://mcgym.de/startseite.html" target="_blank">Marie-Curie-Gymnasium Ludwigsfelde</a></li>
       <li><a href="http://www.mls-marburg.de/" target="_blank">Martin-Luther-Schule Marburg</a></li>
       <li><a href="http://osg-mainz.de/" target="_blank">Otto-Schott-Gymnasium Mainz-Gonsenheim</a></li>
@@ -46,9 +46,8 @@
       <li><a href="http://www.wilhelm-hittorf-gymnasium.de/aktuelles/" target="_blank">Wilhelm-Hittorf-Gymnasium Münster</a></li>
     </ul>
     <br />
-  <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt: AG IT, Schulleitung & Unterricht.</p>
-   <br /> 
-<p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte bedanken!</p> 
+  <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt: AG IT, Schulleitung & Unterricht.</p><br /> 
+ <p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte bedanken!</p> 
 <br /> 
 <h4>Bildungswissenschaftliche Begleitung</h4>  
  <p>Zur pädagogisch-didaktischen Unterstützung des Projekts im Sinne der Entwicklung von Beispielen für die Unterrichtsgestaltung 
