--- a/views/consent/consent.hbs
+++ b/views/consent/consent.hbs
@@ -22,7 +22,7 @@
                             <div class="form-wrapper">
                                 <form method="post" class="registration-form" action={{action}}>
 
-                                    <input type="hidden" name="accountId" value="{{accountId}}" />
+                                    <input type="hidden" name="client_id" value="{{client}}" />
 
                                     <div class="form-group">
 
