--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -25,7 +25,7 @@
                             <h4>Herzlich willkommen bei der Schul-Cloud !</h4>
                             <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit dem <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp 300 Schulen und unterstützt vom Bundesministerium für Forschung und Bildung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrer und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, so zwar so, wie Apps über Smartphones oder Tabletts nutzbar sind.</p>
                             <p class="embed-responsive embed-responsive-16by9">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/nS4a_bTv5_Y" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                                <iframe src="https://www.youtube.com/embed/nS4a_bTv5_Y?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class="embed-responsive-item"></iframe>
                             </p>
                             
 
@@ -50,8 +50,9 @@
                             </ul>
                             <br />
                             <p class="embed-responsive embed-responsive-16by9">
-                                <iframe src="https://www.youtube.com/embed/QHLJERDWW5s?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="embed-responsive-item"></iframe>
+                                <iframe src="https://www.youtube.com/embed/QHLJERDWW5s?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class="embed-responsive-item"></iframe>
                             </p>
+                            
                             <h4>Vorteile der Schul-Cloud</h4>
                             <ul>
                                 <li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
