--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -44,6 +44,7 @@
       <li><a href="http://www.ursulaschule.de/" target="_blank">Ursulaschule Osnabrück</a></li>
       <li><a href="https://www.wilhelm-gym.de/" target="_blank">Wilhelm-Gymnasium Braunschweig</a></li>
       <li><a href="http://www.wilhelm-hittorf-gymnasium.de/aktuelles/" target="_blank">Wilhelm-Hittorf-Gymnasium Münster</a></li>
+      <li><a href="https://www.ostwaldgymnasium.de/index.php" target="_blank">Wilhelm-Ostwald-Schule Gymnasium</a></li>
     </ul>
     <br />
   <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt: AG IT, Schulleitung & Unterricht.</p><br /> 
