--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -84,7 +84,7 @@
                             <li>IGS Waldschule Egels mit IGS Aurich-West</li>
                             <li>NIG-Esens</li>
                             <li>Oberschule Gehrden</li>
-                            <li>Studienseminar für das Lehramt an Gymnasien Stade</li>
+                            <li>Studienseminar Stade - GHRS</li>
                             <li>Studienseminar Hannover für das Lehramt an berufsbildenden Schulen</li>
                         </ul>
                     </div>
