fix file-viewer with special chars

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -31,8 +31,8 @@
                                 <a href="/files/file/"
                                    target="_blank"
                                    data-method="delete"
+                                   data-file-key="{{../this.key}}"
                                    data-file-name="{{../this.name}}"
-                                   data-file-path="{{../this.path}}">
                                     <i class="fa fa-trash-o"></i>
                                 </a>
                                 {{/userHasPermission}}
