fix courseGroup evaluation

--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -34,6 +34,10 @@
                     <form class="form" method="post" action="/homework/submit/{{this.submission._id}}">
                         <input type="hidden" name="_method" data-force-value="true" value="patch" />
                         <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
+                        {{#if this.submission.courseGroupId}}
+                            <input name="courseGroupId" type="hidden" value="{{this.submission.courseGroupId._id}}"/>
+                            <input name="teamSubmissionOptions" type="hidden" value="courseGroup"/>
+                        {{/if}}
                 {{else}}
                     <form class="form" method="post" action="/homework/submit">
                         <input type="hidden" name="_method" data-force-value="true" value="post" />
