add schools to about page

--- a/static/styles/partner/partner.scss
+++ b/static/styles/partner/partner.scss
@@ -25,7 +25,12 @@ hgroup {
 
 .section-partner {
     h5 {
+        color: $primaryColor !important;
+        margin-top: 20px;
+    }
+    h4 {
         color: $primaryColor;
+        font-weight: bold;
         margin-top: 20px;
     }
     ul {
