--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -10,6 +10,9 @@
                 <li class="nav-item hidden-sm-down">
                     <a class="nav-link" href="/partner">Partner</a>
                 </li>
+                <li class="nav-item hidden-sm-down">
+                                    <a class="nav-link" href="/about">Über das Projekt</a>
+                                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/" target="scblog">Blog</a>
                 </li>
