--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -2,6 +2,8 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
+        <link rel="stylesheet" href="/styles/partner/partner.css"/>
+        <link rel="stylesheet" href="/styles/about/about.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}} 
