fix office viewer

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -8,7 +8,7 @@
                     <div class="openFile">
                         <div class="card-block"
                              onclick="location.href='#file-view';
-                                     fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
+                                     fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}','{{this.name}}');">
                             <div class="card-title">
                                 <div class="col-sm-3 no-padding">
                                     <div class="file-preview"
