--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -8,7 +8,7 @@
                     <div class="openFile">
                         <div class="card-block"
                              onclick="location.href='#file-view';
-                                     fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
+                                     fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}','{{this.name}}');">
                             <div class="card-title">
                                 <div class="col-sm-3 no-padding">
                                     <div class="file-preview"
@@ -31,8 +31,8 @@
                                 <a href="/files/file/"
                                    target="_blank"
                                    data-method="delete"
+                                   data-file-key="{{../this.key}}"
                                    data-file-name="{{../this.name}}"
-                                   data-file-path="{{../this.path}}">
                                     <i class="fa fa-trash-o"></i>
                                 </a>
                                 {{/userHasPermission}}
