shorten text on mobile

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -78,7 +78,7 @@
         {{#ifeq currentRole "Demo"}}
             <section class="demo">
                 <div class="alert alert-warning" role="alert">
-                    <p>Dies ist ein Demoaccount. Sämtliche Aktionen, die Daten anlegen oder ändern, sind deaktiviert und nicht sichtbar.</p>
+                    <p>Dies ist ein Demoaccount. <span class="hidden-md-down">Sämtliche Aktionen, die Daten anlegen oder ändern, sind deaktiviert und nicht sichtbar.</span></p>
                 </div>
             </section>
         {{/ifeq}}
