#648: new player built in, chrome/ff/opera working, ie not working

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -6,6 +6,8 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/login.js" type="text/javascript" defer></script>
+        <script src="/scripts/video-player/webcomponentsjs/custom-elements-es5-adapter.js" type="text/javascript" defer></script>
+        <script src="/scripts/video-player/webcomponentsjs/webcomponents-lite.js" type="text/javascript" defer></script>
         <link rel="import" href="/vendor/video-player/video-player.html">
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
