added polyfill for custom element support
Polyfill from:
https://cdnjs.cloudflare.com/ajax/libs/document-register-element/1.4.1/document-register-element.js

--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -5,6 +5,7 @@
 {{#content "scripts" mode="append"}}
     <script src="/vendor/webcomponents-lite.min.js" defer></script>
     <script src="/scripts/moment/moment.js" defer></script>
+    <script src="/scripts/filter/custom-element-polyfill.js" defer></script>
     <script src="/scripts/filter/feathers-filter.js" defer></script>
 {{/content}}
 {{#extend "homework/homework"}}
