fixed fullscreen mode and some topbar css overflow adjustments.

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -98,7 +98,7 @@
                         </ol>
                     {{/if}}
 
-                    <ul class="nav navbar-nav float-xs-right dropdowns">
+                    <ul class="nav navbar-nav float-xs-none dropdowns">
                         <li class="nav-item fullscreen-action">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle btn-fullscreen" data-toggle="dropdown">
@@ -202,7 +202,7 @@
 
                 <section class="section-title">
                     <div class="container-fluid">
-                        <div class="row">
+                        <div class="row" id="titlebar">
                             <div class="col-sm-9">
                                 <div>
                                     <h4>{{title}}</h4>
