--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -85,15 +85,15 @@ aside.nav-sidebar {
 
     nav {
         width: 100%;
-        float: left;
         overflow-y: auto;
 
         @include media-breakpoint-down(xs) {
             overflow: hidden;
             max-height: 0px;
             position: absolute;
-            z-index: 1;
+            z-index: 9998;
             background: lightgrey;
+            box-shadow: 0 2px 5px rgba(0,0,0,.26);
             transition: max-height .3s ease-in-out;
             .sc-branding{
                 box-sizing: border-box;
@@ -218,11 +218,13 @@ aside.nav-sidebar {
     font-size: 22px;
     line-height: 22px;
     cursor: pointer;
-    transition: all .2s linear;
+    transition: transform .2s linear, z-index 0s linear .2s;
     .fa{
-        transition: all .2s linear;
+        transition: color .2s linear;
     }
     &.active{
+        z-index: 9999;
+        transition: transform .2s linear;
         transform: rotate(90deg);
         .fa{
             color: #fff;
@@ -305,8 +307,27 @@ header {
 
 
 body.fullscreen{
+    
+    .nav-sidebar, footer, .search-wrapper, .mobile-nav-toggle{
+        display: none;
+    }
+    #titlebar{
+        width: 100%;
+    }
+    .topbar.navbar{
+        visibility: hidden;
+        height: 0;
+        padding: 0;
+    }
+    .content-wrapper{
+        width: 100vw;
+        .content-min-height{
+            min-height: 100vh;
+        }
+    }
     .btn-fullscreen{
         position: fixed;
+        visibility: visible;
         top: 8px;
         right: 8px;
         z-index: 99999;
@@ -317,19 +338,6 @@ body.fullscreen{
         &:hover{
             opacity: 1;
         }
-    }
-    main#main-content{
-        position: absolute;
-        top:0;
-        left:0;
-        right: 0;
-        min-height: 100vh;
-        z-index: 101;
-        padding: 16px;
-        background: #fff;
-    }
-    .modal-backdrop{
-        display: none
     }
 }
 
@@ -450,6 +458,7 @@ footer {
         margin-bottom: 15px;
         padding-left: 50px !important;
         background: $colorBeige;
+        box-shadow: 0 2px 5px rgba(0,0,0,.26);
     }
 
     .breadcrumb {
