--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -6,9 +6,21 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/login.js" type="text/javascript" defer></script>
-        <script src="/scripts/video-player/webcomponentsjs/custom-elements-es5-adapter.js" type="text/javascript" defer></script>
-        <script src="/scripts/video-player/webcomponentsjs/webcomponents-lite.js" type="text/javascript" defer></script>
-        <link rel="import" href="/vendor/video-player/video-player.html">
+
+
+        <script src="/scripts/video-player/custom-elements-es5-adapter.js" type="text/javascript"></script>
+        <script src="/scripts/video-player/webcomponents-lite.js" type="text/javascript"></script>
+        <!-- IE Polyfills -->
+        <script>
+            if(!('ActiveXObject' in window)) {
+                document.write('<!--');
+            }
+        </script>
+        <script src="/scripts/video-player/polyfills-ie.js" type="text/javascript"></script>
+        <!-- DO NOT REMOVE -->
+
+        <link rel="import" type="module" href="/vendor/video-player/video-player-es6.html">
+        <link nomodule rel="import" href="/vendor/video-player/video-player-es5.html">
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
 
