--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -6,21 +6,6 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/login.js" type="text/javascript" defer></script>
-
-
-        <script src="/scripts/video-player/custom-elements-es5-adapter.js" type="text/javascript"></script>
-        <script src="/scripts/video-player/webcomponents-lite.js" type="text/javascript"></script>
-        <!-- IE Polyfills -->
-        <script>
-            if(!('ActiveXObject' in window)) {
-                document.write('<!--');
-            }
-        </script>
-        <script src="/scripts/video-player/polyfills-ie.js" type="text/javascript"></script>
-        <!-- DO NOT REMOVE -->
-
-        <link rel="import" type="module" href="/vendor/video-player/video-player-es6.html">
-        <link nomodule rel="import" href="/vendor/video-player/video-player-es5.html">
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
 
@@ -38,29 +23,11 @@
                         <div class="card-block">
 
                             <h4>Herzlich willkommen bei der Schul-Cloud !</h4>
-                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit dem <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp 300 Schulen und unterstützt vom Bundesministerium für Forschung und Bildung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrer und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, so zwar so, wie Apps über Smartphones oder Tabletts nutzbar sind.</p>
-
-                            <video-player
-                                    configuration='{
-                                        "streams" : [
-                                          {
-                                            "hd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/trailer2018/hd/video.mp4",
-                                            "sd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/trailer2018/sd/video.mp4",
-                                            "poster": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/trailer2018/trailer-poster.jpg"
-                                          }
-                                        ],
-                                        "language": "de",
-                                        "theme" : "light-green",
-                                        "videoAlignment" : "height",
-                                        "initialState": {
-                                          "volume": 0.75
-                                        },
-                                        "userPreferences" : {
-                                          "quality" : "hd",
-                                          "playbackRate" : 1.0
-                                        }
-                                    }'>
-                            </video-player>
+                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von knapp 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
+                            <p class="embed-responsive embed-responsive-16by9">
+                                <iframe src="https://www.youtube.com/embed/nS4a_bTv5_Y?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class="embed-responsive-item"></iframe>
+                            </p>
+                            
 
                             <ul>
                                 <li>Mehr Informationen: <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf" title="Initiates file download" target="_blank">Kurzbeschreibung "Die Schul-Cloud" (.pdf)</a></li>
@@ -82,27 +49,9 @@
                                 <li>Mehr Informationen: <a href="https://publishup.uni-potsdam.de/opus4-ubp/files/10385/tbhpi116.pdf" title="Initiates file download" target="_blank">Technischer Bericht "Die Schul-Cloud" (.pdf)</a></li>
                             </ul>
                             <br />
-                            <video-player
-                                    configuration='{
-                                        "streams" : [
-                                          {
-                                            "hd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/hd/video.mp4",
-                                            "sd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/sd/video.mp4",
-                                            "poster": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/explainer-poster.jpg"
-                                          }
-                                        ],
-                                        "language": "de",
-                                        "theme" : "light-green",
-                                        "videoAlignment" : "height",
-                                        "initialState": {
-                                          "volume": 0.75
-                                        },
-                                        "userPreferences" : {
-                                          "quality" : "hd",
-                                          "playbackRate" : 1.0
-                                        }
-                                    }'>
-                            </video-player>
+                            <p class="embed-responsive embed-responsive-16by9">
+                                <iframe src="https://www.youtube.com/embed/QHLJERDWW5s?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class="embed-responsive-item"></iframe>
+                            </p>
                             
                             <h4>Vorteile der Schul-Cloud</h4>
                             <ul>
